# HAR-EFNet

./: .gitignore  README.md  main.py  main_collossl.py  main_masked.py  main_mtl.py  main_simclr.py  pyproject.toml  train_classifier.py  train_encoder.py  train_encoder_mtl.py
HAR_SSL/: main.py  train_classifier.py  train_encoder.py
HAR_SSL/classifiers/: __init__.py  classifier_base.py
HAR_SSL/configs/: config.py  data.yaml  model.yaml
HAR_SSL/dataloaders/: data_loader.py  data_utils.py
HAR_SSL/encoders/: base.py  cnn_encoder.py  lstm_encoder.py
HAR_SSL/utils/: logger.py  training_utils.py
classifiers/: __init__.py  base_classifier.py  classifier_base.py  deepconvlstm_attn_classifier.py  deepconvlstm_classifier.py  mlp_classifier.py  sa_har_classifier.py
configs/: config.py  data.yaml  model.yaml
dataloaders/: collossl_data_utils.py  data_loader.py  data_transformations.py  data_utils.py  masked_data_utils.py  mtl_transformations.py  simclr_transformations.py  transformations.py
encoders/: __init__.py  base.py  base_encoder.py  cnn_encoder.py  deepconvlstm_attn_encoder.py  deepconvlstm_encoder.py  lstm_encoder.py  mtl_deepconvlstm_attn_encoder.py  mtl_deepconvlstm_encoder.py  mtl_sa_har_encoder.py  sa_har_encoder.py
encoders/base/: base.py
encoders/collossl/: __init__.py  collossl_encoder.py
encoders/mtl/: __init__.py  (+3 more)
train/: train_classifier.py  train_encoder.py  train_encoder_collossl.py  train_encoder_masked.py  train_encoder_mtl.py  train_encoder_simclr.py
utils/: __init__.py  collossl_utils.py  logger.py  simclr_utils.py  training_utils.py
(+9 files in other folders)
